--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 <div class="container">
-    <div class="jumbatron">
+    <div class="jumbotron">
 
     <img src="img/168925.jpg" alt="band" width="100%" height="200">
 
@@ -24,18 +24,18 @@
     <nav class="navbar navbar-inverse">
         <div class="nav-container">
             <div class="navbar-header">
-                <a class="navbar-brand" href="#/">Monochrome Music</a>
+                <a class="navbar-brand hidden-sm hidden-xs" href="#/">Monochrome Music</a>
             </div>
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="/">Home</a></li>
-                <li><a href="templates/about.html">About</a></li>
-                <li><a href="/">Listen</a></li>
+                <li><a href="/about">About</a></li>
+                <li><a href="/listen">Listen</a></li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Book <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="templates/gigs.html">Gigs</a></li>
+                        <li><a href="/book/gigs">Gigs</a></li>
                         <li><a href="/book/availability">Availability</a></li>
-                    
+                    </ul>
                 </li>
             </ul>
         </div>
