--- a/index.html
+++ b/index.html
@@ -11,19 +11,13 @@
     <script type="text/javascript" src="bower_components/a0-angular-storage/dist/angular-storage.min.js"></script>
         <link href="/css/style.css" rel="stylesheet" type="text/css">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|Quicksand:300,700" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=raleway" rel="stylesheet">
 
 
 </head>
 <body>
-    <img src="img/168925.jpg" alt="band" width="100%" height="200">
 
-<div class="container">
-
-    <div class="jumbotron">
-
-
-
-    <nav class="navbar navbar-inverse">
+<nav class="navbar navbar-inverse">
         <div class="nav-container">
             <div class="navbar-header">
                 <a class="navbar-brand hidden-sm hidden-xs" href="#/">Monochrome Music</a>
@@ -33,17 +27,24 @@
                 <li><a href="/about">About</a></li>
                 <li><a href="/listen">Listen</a></li>
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Book <span class="caret"></span></a>
+                    <a href="#"  class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Book <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="/book/gigs">Gigs</a></li>
-                        <li><a href="/book/availability">Availability</a></li>
+                        <li><a  href="/book/gigs">Gigs</a></li>
+                        <li><a  href="/book/availability">Availability</a></li>
                     </ul>
                 </li>
             </ul>
         </div>
     </nav>
+<!--<div class="header-img">
+    <img src="img/168925.jpg" alt="band" >
+    <div class="header-text">
+    <h1><span> It's all about the music. </span></h1>
+</div>-->
+</div>
 
- 
+ <br>
+ <br>
 
     <div ng-view>
     </div>
