--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
     <script type="text/javascript" src="bower_components/angular-route/angular-route.min.js"></script>
     <script type="text/javascript" src="bower_components/a0-angular-storage/dist/angular-storage.min.js"></script>
-        <link href="/css/style.css" rel="stylesheet" type="text/css">
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|Quicksand:300,700" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=raleway" rel="stylesheet">
+    <link href="/css/style.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|Quicksand:300,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=raleway" rel="stylesheet">
 
 
 </head>
@@ -36,6 +36,8 @@
             </ul>
         </div>
     </nav>
+
+
 <!--<div class="header-img">
     <img src="img/168925.jpg" alt="band" >
     <div class="header-text">
@@ -46,11 +48,33 @@
  <br>
  <br>
 
+
+
     <div ng-view>
     </div>
         
     </div>
 </div>
+
+<footer class="fullWidth">
+            <div>
+                <a href="[full link to your Twitter]">
+                    <img title="Twitter" alt="Twitter" src="https://socialmediawidgets.files.wordpress.com/2014/03/01_twitter.png" width="30" height="30" />
+                </a>
+                <a href="[full link to your Facebook page]">
+                    <img title="Facebook" alt="Facebook" src="https://socialmediawidgets.files.wordpress.com/2014/03/02_facebook.png" width="30" height="30" />
+                </a>
+                <a href="[full link to your LinkedIn]">
+                    <img title="LinkedIn" alt="LinkedIn" src="https://socialmediawidgets.files.wordpress.com/2014/03/07_linkedin.png" width="30" height="30" />
+                </a>
+                <a href="[full link to your Instagram]">
+                    <img title="Instagram" alt="RSS" src="https://socialmediawidgets.files.wordpress.com/2014/03/10_instagram.png" width="30" height="30" />
+                </a> 
+
+              <a href="https://geo.itunes.apple.com/us/album/piano-music/id528447805?i=528447808&mt=1&app=music" style="display:inline-block;float:right;overflow:hidden;background:url(//tools.applemusic.com/assets/shared/badges/en-gb/music-lrg.svg) no-repeat;width:200px;height:50px;"></a>
+
+</div>
+</footer>
 </body>
 <script src='js/app.js'></script>
 <script src='js/controller.js'></script>
