--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html ng-app='BandApp'>
 <head>
-    <base href="/">
+    <base href="/streamone-project/">
     <title>Monochrome Music</title>
     <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
     <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
@@ -23,14 +23,14 @@
                 <a class="navbar-brand hidden-sm hidden-xs" href="#/">Monochrome Music</a>
             </div>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="/">Home</a></li>
-                <li><a href="/about">About</a></li>
-                <li><a href="/listen">Listen</a></li>
+                <li><a href="./">Home</a></li>
+                <li><a href="about">About</a></li>
+                <li><a href="listen">Listen</a></li>
                 <li class="dropdown">
                     <a href="#"  class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Book <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a  href="/book/gigs">Gigs</a></li>
-                        <li><a  href="/book/availability">Availability</a></li>
+                        <li><a  href="book/gigs">Gigs</a></li>
+                        <li><a  href="book/availability">Availability</a></li>
                     </ul>
                 </li>
             </ul>
@@ -38,11 +38,6 @@
     </nav>
 
 
-<!--<div class="header-img">
-    <img src="img/168925.jpg" alt="band" >
-    <div class="header-text">
-    <h1><span> It's all about the music. </span></h1>
-</div>-->
 </div>
 
  <br>
@@ -79,5 +74,4 @@
 <script src='js/app.js'></script>
 <script src='js/controller.js'></script>
 <script src='js/service.js'></script>
-<script src='js/directive.js'></script>
 </html>
